Thu Feb  5 15:11:13 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          For the installed binary executable target, added a dependency on
          the local binary executable so the installed version is refereshed
          when the local one is rebuilt (only an issue when actual copies are
          used and not symlinks).  Thanks to Hubert Talbot
          <Hubert dot Talbot at criq dot qc dot ca> for reporting the issue.

        * tests/run_test.lst:

          Added !QNX to MEM_Stream_Test.  This test doesn't work on QNX.

Wed Feb  4 22:23:26 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_SEQPACK_Acceptor.h:
        * ace/Multihomed_INET_Addr.h: Formatting fixes.

        * tests/SOCK_SEQPACK_SCTP_Test.cpp: Removed asserts, fixed IPv6
          operation, resync log after fork(), corrected negative association
          test case.

Tue Feb  3 23:28:50 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.cpp (mutex_init, event_init):
        * ace/OS_NS_Thread.inl (event_init, sema_init): Make sure errno gets
          set to ERROR_ALREADY_EXISTS when creating an object that exists. This
          is in Windows code only. Fixes Bugzilla #3541. Thanks to Bill Rizzi
          for identifying the bug and supplying the test case and fix.

Tue Feb  3 19:45:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.h:
        * ace/Active_Map_Manager_T.h:
        * ace/CDR_Stream.h:
        * ace/Configuration.h:
        * ace/Connector.h:
        * ace/Dev_Poll_Reactor.h:
        * ace/Dirent.h:
        * ace/Map_T.h:
        * ace/Message_Block.h:
        * ace/Message_Queue_Vx.h:
        * ace/Name_Request_Reply.h:
        * ace/Reactor.h:
        * ace/Reactor_Impl.h:
        * ace/Select_Reactor_Base.h:
        * ace/Select_Reactor_T.h:
        * ace/Strategies_T.h:
        * ace/WFMO_Reactor.h:
          Doxygen changes

        * ace/Unbounded_Queue.h: